[project]
name = "get-papers"
version = "0.1.0"
description = "A CLI tool to fetch research papers from PubMed."
authors = [
    {name = "Gururaj"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]
package-mode = false  # Add this line to disable package mode

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
